cmake_minimum_required(VERSION 3.14)
project(gpujob)
enable_testing()
include(GNUInstallDirs)

find_package(fmt 8 REQUIRED)
find_package(ftxui REQUIRED)
find_package(Boost REQUIRED COMPONENTS headers filesystem)
find_package(cxxopts REQUIRED)
find_package(cereal REQUIRED)

get_property(ImportedTargets DIRECTORY "${CMAKE_SOURCE_DIR}" PROPERTY IMPORTED_TARGETS)
message("Imported targets: ${ImportedTargets}")
message("List of compile features: ${CMAKE_CXX_COMPILE_FEATURES}")

add_executable(job src/job.cpp)
target_include_directories(job PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(job PRIVATE fmt::fmt ftxui::screen ftxui::dom ftxui::component Boost::headers Boost::filesystem
	cereal::cereal)
set_property(TARGET job PROPERTY CXX_STANDARD 23)
set_property(TARGET job PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET job PROPERTY CXX_EXTENSIONS OFF)

add_executable(job-cli src/job-cli.cpp)
target_include_directories(job-cli PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(job-cli PRIVATE fmt::fmt Boost::headers cxxopts::cxxopts cereal::cereal)
set_property(TARGET job-cli PROPERTY CXX_STANDARD 23)
set_property(TARGET job-cli PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET job-cli PROPERTY CXX_EXTENSIONS OFF)

add_executable(jobd src/jobd.cpp)
target_include_directories(jobd PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(jobd PRIVATE fmt::fmt Boost::headers Boost::filesystem cereal::cereal)
set_property(TARGET jobd PROPERTY CXX_STANDARD 23)
set_property(TARGET jobd PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET jobd PROPERTY CXX_EXTENSIONS OFF)
